# melodygenerator

./: .dockerignore  .env.example  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.coolify.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/api/: .env.example  Dockerfile  conftest.py  pyproject.toml  wsgi.py
backend/api/app/database/postgres/: PostgresDatabase.py  database.py
backend/api/app/src/: api.py  config.py  dependencies.py
backend/api/app/src/errors/: __init__.py  api.py  auth.py  database.py  handlers.py  http.py  validation.py
backend/api/app/src/routes/: __init__.py  main.py
backend/api/app/src/routes/endpoints/admin/: admin_routes.py
backend/api/app/src/routes/endpoints/auth/: auth_routes.py
backend/api/app/src/routes/endpoints/melody/: melody.py
backend/api/app/src/routes/endpoints/user/: user_account_routes.py
backend/api/app/src/services/: file_cleanup.py  melody_generator.py  midi_service.py  model_loader.py  sampling.py  storage.py
backend/api/app/src/utils/: auth.py  logging.py
backend/api/app/tests/: conftest.py  test_api.py  test_auth.py  test_config.py  test_create_api.py  test_error_handling.py  test_errors.py  test_file_cleanup.py  test_gallery.py  test_logging_middleware.py  test_melody_conditions.py  test_melody_download.py  test_melody_generate.py  test_melody_instruments.py  test_melody_models.py  test_midi_service.py  test_model_loader.py  test_postgres_database.py  test_sampling.py  test_storage.py  test_websocket.py
backend/nginx-proxy-config/: default.conf
backend/postgres/: .env.example  init.sql
frontend/: .dockerignore  .env.example  .env.production.example  Dockerfile  eslint.config.mjs  next.config.js  next.config.ts  package.json  vitest.config.js
frontend/app/: layout.js  layout.tsx  page.js  providers.js  providers.tsx
frontend/config/: constants.js  constants.ts
frontend/context/: melody-context.tsx  (+1 more)
model-trainer/: Dockerfile  pyproject.toml  train_v6.py  train_v7.py  train_v8.py
model-trainer/app/: conditions.py  config.py  evaluation.py  experiment_tracker.py  main.py  midi_processor.py  model_builder.py  model_trainer.py  train.py  utils.py
model-trainer/app/data/: __init__.py  augmentation.py  processor.py  tokenizer.py
model-trainer/app/training/: scheduler.py  trainer.py
model-trainer/configs/: v6-lstm-remi.yaml  v7-transformer.yaml  v8-transformer-bpe.yaml
scripts/: convert_tf_to_pytorch.py
(+82 files in other folders)
